--- a/Pertemuan2/style.css
+++ b/Pertemuan2/style.css
@@ -1,26 +1,20 @@
-h2 {
-    color: orange;
-    font-family: 'Trebuchet MS', sans-serif;
-    text-align: center;
-}
-
-.kotak {
-    padding: 50px;
-    width: 100px;
-    color: white;
-    margin: 10px;
-    background: orange;
-}
-
-#kotak4 {
-    width: 400px;
-    color: white;
-    background: blue;
-    padding: 50px;
+html, body {
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    background: url('img/tree1.jpg'), url('img/field1.jpg');
-    background-repeat: no-repeat, repeat;
-    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #ddd;
+    line-height: 1.65;
+    padding-bottom: 1000px;
+}
+
+.container-satu {
+    width: 800px;
+    margin: 50px auto;
+    background-color: #fff;
+    padding: 20px;
+    box-sizing: border-box;
+    display: flex;
 }
